added action detection
fixed measure spec

--- a/ardUI/library.properties
+++ b/ardUI/library.properties
@@ -2,8 +2,8 @@ name=ardUI
 version=0.0.1-alpha
 author=MStefan99
 maintainer=MStefan99
-sentence=The last Arduino UI framework you'll ever need!
-paragraph=
+sentence=The Arduino UI framework you were looking for!
+paragraph=ardUI makes it easier to make complex user interfaces with just a few lines of code.
 category=Display
 includes=ardUI.h
 url=https://github.com/MStefan99/ardUI
