--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(ardUI_test)
+project(ardUI)
 
 set(CMAKE_CXX_STANDARD 11)
 # set(CMAKE_CXX_FLAGS "--coverage")
