added ardUI Builder
improved compiled layout api
made events framerate-independent
added windows and emscripten builds
improved click coordinate api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(ARDUI_DIRNAME ardUI)
 set(SOURCE_DIRNAME src)
 set(INCLUDE_DIRNAME inc)
 set(ARDUINO_DIRNAME Arduino)
-set(TESTS_DIRNAME test)
+set(TEST_DIRNAME test)
 
 
 # Setting directory paths
@@ -17,12 +17,14 @@ set(ARDUI_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUI_DIRNAME})
 set(SOURCE_DIRECTORY ${ARDUI_DIRECTORY}/${SOURCE_DIRNAME})
 set(INCLUDE_DIRECTORY ${ARDUI_DIRECTORY}/${INCLUDE_DIRNAME})
 set(ARDUINO_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUINO_DIRNAME})
-set(TEST_DIRECTORY ${PROJECT_SOURCE_DIR}/${TESTS_DIRNAME})
+set(TEST_DIRECTORY ${PROJECT_SOURCE_DIR}/${TEST_DIRNAME})
 set(EXAMPLES_DIRECTORY ${PROJECT_SOURCE_DIR}/examples)
+set(BUILDER_DIRECTORY ${PROJECT_SOURCE_DIR}/Builder)
 
 
 # Adding ardUI and Arduino emulator build lists
 add_subdirectory(${ARDUINO_DIRECTORY})
 add_subdirectory(${ARDUI_DIRECTORY})
+add_subdirectory(${BUILDER_DIRECTORY})
 add_subdirectory(${EXAMPLES_DIRECTORY})
-add_subdirectory(${TESTS_DIRNAME})
+add_subdirectory(${TEST_DIRECTORY})
