--- a/Arduino/CMakeLists.txt
+++ b/Arduino/CMakeLists.txt
@@ -2,3 +2,4 @@
 add_library(arduinoEmulator STATIC)
 target_sources(arduinoEmulator PRIVATE ${ARDUINO_DIRECTORY}/Arduino.cpp)
 target_include_directories(arduinoEmulator PUBLIC ${ARDUINO_DIRECTORY})
+target_link_libraries(arduinoEmulator ardUI)
