--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,19 +8,19 @@ set(TESTER_DIRECTORY ${TEST_DIRECTORY}/Tester/inc)
 include_directories(${TESTER_DIRECTORY})
 
 
-# Template library test target
+# Template library Test target
 add_executable(
 		Test_template_library
 		${TEST_DIRECTORY}/tests/tl.test.cpp
 )
 
-# Bundle test target
+# Bundle Test target
 add_executable(
 		Test_Bundle
 		${TEST_DIRECTORY}/tests/bundle.test.cpp
 )
 
-# Bundle test target
+# Bundle Test target
 add_executable(
 		Test_Activity
 		${TEST_DIRECTORY}/tests/activity.test.cpp
