added view tree and interface articles

--- a/ardUI/library.properties
+++ b/ardUI/library.properties
@@ -5,6 +5,6 @@ maintainer=MStefan99
 sentence=The Arduino UI framework you were looking for!
 paragraph=ardUI makes it easier to make complex user interfaces with just a few lines of code.
 category=Display
-includes=ardUI.h
+includes=ardUI.h,llpi.h
 url=https://github.com/MStefan99/ardUI
 architectures=*
