--- a/ardUI/CMakeLists.txt
+++ b/ardUI/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${COMPILER_FLAGS})
 # Adding ardUI framework
 add_library(ardUI STATIC)
 target_sources(ardUI PRIVATE
+		${SOURCE_DIRECTORY}/DisplayController.cpp
 		${SOURCE_DIRECTORY}/Bundle.cpp
 		${SOURCE_DIRECTORY}/Rect.cpp
 		${SOURCE_DIRECTORY}/Drawable.cpp
