added rect testing template
added more colors

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,19 +8,22 @@ add_subdirectory(${TEST_DIRECTORY}/Tester)
 link_libraries(Tester)
 
 
-# Template library Test target
+# Individual test targets
 add_executable(
 		Test_template_library
 		${TEST_DIRECTORY}/tests/tl.test.cpp
 )
 
-# Bundle Test target
+add_executable(
+		Test_Rect
+		${TEST_DIRECTORY}/tests/rect.test.cpp
+)
+
 add_executable(
 		Test_Bundle
 		${TEST_DIRECTORY}/tests/bundle.test.cpp
 )
 
-# Bundle Test target
 add_executable(
 		Test_Activity
 		${TEST_DIRECTORY}/tests/activity.test.cpp
