added test counters

--- a/test/Tester/CMakeLists.txt
+++ b/test/Tester/CMakeLists.txt
@@ -7,6 +7,7 @@ target_include_directories(Tester PUBLIC ${TESTER_DIRECTORY}/inc)
 
 target_sources(Tester PRIVATE
 		${TESTER_SOURCE_DIRECTORY}/AssertException.cpp
+		${TESTER_SOURCE_DIRECTORY}/TestCounter.cpp
 		${TESTER_SOURCE_DIRECTORY}/Test.cpp
 		${TESTER_SOURCE_DIRECTORY}/TestBlock.cpp
 		${TESTER_SOURCE_DIRECTORY}/Tester.cpp
