--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-
       - name: Test
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}  --target Test_template_library
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        --target Test_template_library -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++
