--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Test
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-        --target Test_template_library -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++
+        run: >-
+          cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+          --target Test_template_library -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++
