--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Test
         run: >-
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-          --target Test_template_library -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++
+          --target Test_template_library -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
