--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Configure CMake
+        run: >-
+          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+          -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+
       - name: Test
         run: >-
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-          --target Test_template_library -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+          --target Test_template_library
