--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
           --target Test_template_library
           --target Test_Rect
+          --target Test_Bundle
           --target Test_Activity
 
       - name: Test template library
@@ -29,6 +30,9 @@ jobs:
 
       - name: Test Rect
         run: ${{github.workspace}}/build/test/Test_Rect
+
+      - name: Test Bundle
+        run: ${{github.workspace}}/build/test/Test_Bundle
 
       - name: Test Activity
         run: ${{github.workspace}}/build/test/Test_Activity
