--- a/test/Tester/CMakeLists.txt
+++ b/test/Tester/CMakeLists.txt
@@ -9,6 +9,6 @@ target_sources(Tester PRIVATE
 		${TESTER_SOURCE_DIRECTORY}/AssertException.cpp
 		${TESTER_SOURCE_DIRECTORY}/TestCounter.cpp
 		${TESTER_SOURCE_DIRECTORY}/Test.cpp
-		${TESTER_SOURCE_DIRECTORY}/TestBlock.cpp
+		${TESTER_SOURCE_DIRECTORY}/TestSuite.cpp
 		${TESTER_SOURCE_DIRECTORY}/Tester.cpp
 		)
