--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,8 @@ jobs:
           --target Test_template_library
           --target Test_Rect
           --target Test_Bundle
+          --target Test_Color
+          --target Test_Drawable
           --target Test_View
           --target Test_Activity
           --target Test_Activity_result
@@ -36,6 +38,12 @@ jobs:
 
       - name: Test Bundle
         run: ${{github.workspace}}/build/test/Test_Bundle
+
+      - name: Test Color
+        run: ${{github.workspace}}/build/test/Test_Color
+
+      - name: Test Drawable
+        run: ${{github.workspace}}/build/test/Test_Drawable
 
       - name: Test View
         run: ${{github.workspace}}/build/test/Test_View
