--- a/ardUI/CMakeLists.txt
+++ b/ardUI/CMakeLists.txt
@@ -21,6 +21,7 @@ target_sources(ardUI PRIVATE
 		${SOURCE_DIRECTORY}/ConstraintLayout.cpp
 		${SOURCE_DIRECTORY}/ScrollLayout.cpp
 		${SOURCE_DIRECTORY}/EventManager.cpp
+		${SOURCE_DIRECTORY}/Dialog.cpp
 		${SOURCE_DIRECTORY}/Activity.cpp
 		${SOURCE_DIRECTORY}/ActivityManager.cpp
 		${SOURCE_DIRECTORY}/ardUI.cpp
