separated source files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,18 @@ set(TEST_DIRNAME test)
 
 # Setting directory paths
 set(ARDUI_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUI_DIRNAME})
-set(SOURCE_DIRECTORY ${ARDUI_DIRECTORY}/${SOURCE_DIRNAME})
-set(INCLUDE_DIRECTORY ${ARDUI_DIRECTORY}/${INCLUDE_DIRNAME})
 set(ARDUINO_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUINO_DIRNAME})
 set(TEST_DIRECTORY ${PROJECT_SOURCE_DIR}/${TEST_DIRNAME})
 set(EXAMPLES_DIRECTORY ${PROJECT_SOURCE_DIR}/examples)
 set(BUILDER_DIRECTORY ${PROJECT_SOURCE_DIR}/Builder)
+
+
+set(CORE_INC_DIRECTORY ${ARDUI_DIRECTORY}/core/inc)
+set(CORE_SRC_DIRECTORY ${ARDUI_DIRECTORY}/core/src)
+set(WIDGETS_INC_DIRECTORY ${ARDUI_DIRECTORY}/widgets/inc)
+set(WIDGETS_SRC_DIRECTORY ${ARDUI_DIRECTORY}/widgets/src)
+set(TL_DIRECTORY ${ARDUI_DIRECTORY}/tl)
+set(CONFIG_DIRECTORY ${ARDUI_DIRECTORY}/config)
 
 
 # Adding ardUI and Arduino emulator build lists
