--- a/ardUI/CMakeLists.txt
+++ b/ardUI/CMakeLists.txt
@@ -7,28 +7,31 @@ add_compile_options(-Weverything -Werror
 # Adding ardUI framework
 add_library(ardUI STATIC)
 target_sources(ardUI PRIVATE
-		${SOURCE_DIRECTORY}/Color.cpp
-		${SOURCE_DIRECTORY}/DisplayController.cpp
-		${SOURCE_DIRECTORY}/Bundle.cpp
-		${SOURCE_DIRECTORY}/Rect.cpp
-		${SOURCE_DIRECTORY}/Drawable.cpp
-		${SOURCE_DIRECTORY}/View.cpp
-		${SOURCE_DIRECTORY}/ProgressBar.cpp
-		${SOURCE_DIRECTORY}/TextView.cpp
-		${SOURCE_DIRECTORY}/ButtonView.cpp
-		${SOURCE_DIRECTORY}/ViewGroup.cpp
-		${SOURCE_DIRECTORY}/LinearLayout.cpp
-		${SOURCE_DIRECTORY}/ConstraintLayout.cpp
-		${SOURCE_DIRECTORY}/ScrollLayout.cpp
-		${SOURCE_DIRECTORY}/EventManager.cpp
-		${SOURCE_DIRECTORY}/Dialog.cpp
-		${SOURCE_DIRECTORY}/Activity.cpp
-		${SOURCE_DIRECTORY}/ActivityManager.cpp
-		${SOURCE_DIRECTORY}/ardUI.cpp
+		${CORE_SRC_DIRECTORY}/DisplayController.cpp
+		${CORE_SRC_DIRECTORY}/Color.cpp
+		${CORE_SRC_DIRECTORY}/Bundle.cpp
+		${CORE_SRC_DIRECTORY}/Rect.cpp
+		${CORE_SRC_DIRECTORY}/Drawable.cpp
+		${CORE_SRC_DIRECTORY}/View.cpp
+		${CORE_SRC_DIRECTORY}/EventManager.cpp
+		${CORE_SRC_DIRECTORY}/Dialog.cpp
+		${CORE_SRC_DIRECTORY}/Activity.cpp
+		${CORE_SRC_DIRECTORY}/ActivityManager.cpp
+		${CORE_SRC_DIRECTORY}/ardUI.cpp
 		)
 
+target_sources(ardUI PRIVATE
+		${WIDGETS_SRC_DIRECTORY}/ProgressBar.cpp
+		${WIDGETS_SRC_DIRECTORY}/TextView.cpp
+		${WIDGETS_SRC_DIRECTORY}/ButtonView.cpp
+		${WIDGETS_SRC_DIRECTORY}/ViewGroup.cpp
+		${WIDGETS_SRC_DIRECTORY}/LinearLayout.cpp
+		${WIDGETS_SRC_DIRECTORY}/ScrollLayout.cpp
+		${WIDGETS_SRC_DIRECTORY}/ConstraintLayout.cpp
+		)
 
-target_include_directories(ardUI PUBLIC ${INCLUDE_DIRECTORY})
-target_include_directories(ardUI PUBLIC ${INCLUDE_DIRECTORY}/config)
-target_include_directories(ardUI PUBLIC ${INCLUDE_DIRECTORY}/tl)
+target_include_directories(ardUI PUBLIC ${CORE_INC_DIRECTORY})
+target_include_directories(ardUI PUBLIC ${WIDGETS_INC_DIRECTORY})
+target_include_directories(ardUI PUBLIC ${CONFIG_DIRECTORY})
+target_include_directories(ardUI PUBLIC ${TL_DIRECTORY})
 target_link_libraries(ardUI arduinoEmulator)
