--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,13 @@ set(TEST_DIRECTORY ${PROJECT_SOURCE_DIR}/${TEST_DIRNAME})
 set(EXAMPLES_DIRECTORY ${PROJECT_SOURCE_DIR}/examples)
 set(BUILDER_DIRECTORY ${PROJECT_SOURCE_DIR}/Builder)
 
+set(TL_DIRECTORY ${ARDUI_DIRECTORY}/core/tl)
+set(CONFIG_DIRECTORY ${ARDUI_DIRECTORY}/config)
+set(CORE_INC_DIRECTORY ${ARDUI_DIRECTORY}/core/inc)
+set(CORE_SRC_DIRECTORY ${ARDUI_DIRECTORY}/core/src)
+set(WIDGETS_INC_DIRECTORY ${ARDUI_DIRECTORY}/widgets/inc)
+set(WIDGETS_SRC_DIRECTORY ${ARDUI_DIRECTORY}/widgets/src)
+
 
 # Adding ardUI and Arduino emulator build lists
 add_subdirectory(${ARDUINO_DIRECTORY})
