fixed emscripten bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,12 @@ set(SOURCE_DIRNAME src)
 set(INCLUDE_DIRNAME inc)
 set(ARDUINO_DIRNAME Arduino)
 set(TEST_DIRNAME test)
+set(EXAMPLE_DIRNAME examples)
+set(BUILDER_DIRNAME Builder)
 
 
 # Setting directory paths
 set(ARDUI_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUI_DIRNAME})
-set(ARDUINO_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUINO_DIRNAME})
-set(TEST_DIRECTORY ${PROJECT_SOURCE_DIR}/${TEST_DIRNAME})
-set(EXAMPLES_DIRECTORY ${PROJECT_SOURCE_DIR}/examples)
-set(BUILDER_DIRECTORY ${PROJECT_SOURCE_DIR}/Builder)
 
 set(TL_DIRECTORY ${ARDUI_DIRECTORY}/core/tl)
 set(CONFIG_DIRECTORY ${ARDUI_DIRECTORY}/config)
@@ -25,6 +23,12 @@ set(CORE_INC_DIRECTORY ${ARDUI_DIRECTORY}/core/inc)
 set(CORE_SRC_DIRECTORY ${ARDUI_DIRECTORY}/core/src)
 set(WIDGETS_INC_DIRECTORY ${ARDUI_DIRECTORY}/widgets/inc)
 set(WIDGETS_SRC_DIRECTORY ${ARDUI_DIRECTORY}/widgets/src)
+
+
+set(ARDUINO_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUINO_DIRNAME})
+set(TEST_DIRECTORY ${PROJECT_SOURCE_DIR}/${TEST_DIRNAME})
+set(EXAMPLES_DIRECTORY ${PROJECT_SOURCE_DIR}/${EXAMPLE_DIRNAME})
+set(BUILDER_DIRECTORY ${PROJECT_SOURCE_DIR}/${BUILDER_DIRNAME})
 
 
 # Adding ardUI and Arduino emulator build lists
